fixed like/heart, link alignment

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,23 @@ html {
     text-align: center;
 }
 
+/* favorite and random nav */
+
+
+.favoriteNav {
+    color: white;
+    font-size: 20px;
+    font-family: 'Lobster', cursive;
+    margin-right: 20px;
+}
+
+.randomNav {
+    color: white;
+    font-size: 20px;
+    font-family: 'Lobster', cursive;
+}
+
+
 /* landing page's header */
 .landing {
     text-align: center;
@@ -111,6 +128,7 @@ header h2 {
     background-color: transparent;
     border: transparent;
     color: white;
+    margin-right: 20px;
 }
 a:hover {
     color: white;
@@ -328,6 +346,7 @@ ul li{
 
 /* error message */
 .alert{
+    margin-top: 10px;
     color: red;
     background-color: rgba(250, 250, 250, 0.9);
     text-align: center;
@@ -338,18 +357,18 @@ ul li{
     justify-content: center;
 }
 
-
-
-
-
 @media (max-width:540px) {
     .signout{
-        margin-left: 270px;
+        margin-left: 400px;
         position: relative;
         margin-top: 0;
     }
-}
 
+    .favoriteNav {
+        margin-left: 150px;
+    }
+    
+}
 
 /* responsive settings */
 @media (max-width:575px) {
@@ -463,4 +482,3 @@ ul li{
     }
     
 }
-
